@@ -4,6 +4,7 @@
 * Client: Requires new consensus lib (from bitcon-core 0.13.1)
 * Client: Added "-trust" switch, with which client should be as fast as downloader
 * Downloader: replaced by "client -trust" and removed from the source base
+* The concept of "dust" outputs has been removed. Only the fees are important.
 
 1.7.4
 * Lib: Fixed rejecting of too big blocks
